--- a/scalpel.conf
+++ b/scalpel.conf
@@ -172,8 +172,8 @@
 #       wma     y       8000000  \x30\x26\xB2\x75    \x52\x9A\x12\x46
 #
 # MP3
-#       mp3     y       8000000 \xFF\xFB??\x44\x00\x00
-#       mp3     y       8000000 \x57\x41\x56\45            \x00\x00\xFF\
+#       mp3     y       8000000 \xFF\xFB?\x44\x00\x00
+#       mp3     y       8000000 \x57\x41\x56\x45            \x00\x00\xFF\
 #       mp3     y       8000000 \xFF\xFB\xD0\            \xD1\x35\x51\xCC\
 #       mp3     y       8000000 \x49\x44\x33\
 #       mp3     y       8000000 \x4C\x41\x4D\x45\
